--- a/Airport.WebApi/ClientLight/Strings/en/Resources.resw
+++ b/Airport.WebApi/ClientLight/Strings/en/Resources.resw
@@ -117,13 +117,58 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="CustomerPage_Title.Text" xml:space="preserve">
+    <value>Customer</value>
+  </data>
   <data name="MainPageMenuItemDisplayName" xml:space="preserve">
     <value>Main page</value>
+  </data>
+  <data name="Main_Title.Text" xml:space="preserve">
+    <value>Main</value>
   </data>
   <data name="MyPageMenuItemDisplayName" xml:space="preserve">
     <value>MyCustomPage</value>
   </data>
+  <data name="PilotsPage_Title.Text" xml:space="preserve">
+    <value>Pilots</value>
+  </data>
   <data name="SecondPageMenuItemDisplayName" xml:space="preserve">
     <value>Second page</value>
+  </data>
+  <data name="Settings_About.Text" xml:space="preserve">
+    <value>About this application</value>
+  </data>
+  <data name="Settings_AboutDescription.Text" xml:space="preserve">
+    <value>Customer CRUD application sample to show the usage of the Windows Template Studio to create a full UWP application</value>
+  </data>
+  <data name="Settings_PrivacyTermsLink.Content" xml:space="preserve">
+    <value>Privacy Terms</value>
+  </data>
+  <data name="Settings_PrivacyTermsLink.NavigateUri" xml:space="preserve">
+    <value>https://YourPrivacyUrlGoesHere/</value>
+  </data>
+  <data name="Settings_Theme.Text" xml:space="preserve">
+    <value>Theme</value>
+  </data>
+  <data name="Settings_ThemeToggle.OffContent" xml:space="preserve">
+    <value>Dark</value>
+  </data>
+  <data name="Settings_ThemeToggle.OnContent" xml:space="preserve">
+    <value>Light</value>
+  </data>
+  <data name="Settings_Title.Text" xml:space="preserve">
+    <value>Settings</value>
+  </data>
+  <data name="Shell_Customer" xml:space="preserve">
+    <value>Customer</value>
+  </data>
+  <data name="Shell_Main" xml:space="preserve">
+    <value>Main</value>
+  </data>
+  <data name="Shell_Pilots" xml:space="preserve">
+    <value>Pilots</value>
+  </data>
+  <data name="Shell_Settings" xml:space="preserve">
+    <value>Settings</value>
   </data>
 </root>
